cmake_minimum_required(VERSION 3.0.2)
project(wt910_imu_reader)

find_package(catkin REQUIRED COMPONENTS
  rospy
  sensor_msgs
  geometry_msgs
)

catkin_package()

include_directories(
  ${catkin_INCLUDE_DIRS}
)

catkin_install_python(PROGRAMS
  src/wt910_imu_reader.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

